some padding to keep our header visible with fixed nav bar

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -13,6 +13,7 @@ TODO: z-index: auto, does it work? it does but you hvae to postion it.
   flex-direction: column;
   justify-content: center;
   background-image: url(../images/concrete-wall-2.png);
+  margin-top: 120px;
 }
 
 /*
